tests/fixtures/invalid/round_int_set.py
# Cannot call round() with Int, Set[int]
x = round(1, {1, 2, 3})
